plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

repositories {
	maven { url 'https://maven.twelveiterations.com/repository/maven-public/' }
	maven { url 'https://repo.bluecolored.de/releases' }
}

loom {
	splitEnvironmentSourceSets()

	mods {
		"wm" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}

}


dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
	compileOnly "net.blay09.mods:waystones-fabric:${waystones_version}"
	compileOnly "de.bluecolored:bluemap-api:2.7.7"

	testImplementation "org.junit.jupiter:junit-jupiter:5.10.0"
	testRuntimeOnly "org.junit.platform:junit-platform-launcher:1.10.0"
	testImplementation "org.mockito:mockito-core:5.8.0"
	testImplementation "de.bluecolored:bluemap-api:2.7.7"
	testImplementation "net.blay09.mods:waystones-fabric:${waystones_version}"
}

test {
	useJUnitPlatform()
	jvmArgs "-Dnet.bytebuddy.experimental=true"
}

processResources {
	def version = project.version
	inputs.property "version", version

	filesMatching("fabric.mod.json") {
		expand "version": version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

java {
	withSourcesJar()

	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

jar {
	def projectName = project.name
	inputs.property "projectName", projectName

	from("LICENSE") {
		rename { "${it}_$projectName"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}
